# ap-classifier-server

./: CMakeLists.txt  README.md  common.cpp  common.hpp  example_test.csv
client/: client.cpp  client.hpp  client_main.cpp
client/command_handlers/: command_handler.cpp  command_handler.hpp  echo_response.cpp  echo_response.hpp  handle_settings.cpp  handle_settings.hpp  handle_upload.cpp  handle_upload.hpp  receive_results.cpp  receive_results.hpp
io/: defaultio.cpp  defaultio.hpp  socketio.cpp  socketio.hpp  standardio.cpp  standardio.hpp
server/: cli.cpp  cli.hpp  client_data.cpp  client_data.hpp  server.cpp  server.hpp  server_main.cpp
server/classifier/: knn.hpp  knn.tpp  metric.cpp  metric.hpp  utils.hpp
server/commands/: change_algorithm_settings.cpp  change_algorithm_settings.hpp  classify_data.cpp  classify_data.hpp  command.cpp  command.hpp  confusion_matrix.cpp  confusion_matrix.hpp  display_results.hpp  download_results.hpp  send_classified.cpp  send_classified.hpp  upload.cpp  upload.hpp
server/csv/: csv.tpp
